# linkedin_mcp

./: .dockerignore  Dockerfile  README.md  clear_cache.ps1  dev.ps1  docker_build.ps1  pyproject.toml  run_server.ps1  run_server.sh
profiles/: gil-palma-fernandes@linkedin.com.json  search_consultants_by_name_gil_palma_fernandes.json
src/linkedin_mcp/cli/: linkedin_login.py
src/linkedin_mcp/client/: client_sse.py  client_stdio.py
src/linkedin_mcp/config/: config.py  logging_config.py
src/linkedin_mcp/model/: linkedin_person.py  linkedin_profile.py
src/linkedin_mcp/server/: server.py
src/linkedin_mcp/service/browser_scraper/: actions.py  cookie_manager.py  linkedin_search.py  linkedin_util_functions.py  profile_extraction.py  profile_scraper.py  scraper_base.py
src/linkedin_mcp/utils/: linkedin_util_functions.py
tests/: __init__.py  conftest.py  test_example.py
tests/config/: test_config.py
tests/model/: test_linkedin_person.py
tests/service/: __init__.py
tests/service/browser_scraper/: __init__.py  test_profile_extraction.py
